Added "Save As" button to the Skin Editor.

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -103,10 +103,9 @@
     <h2>Custom Skin Editor</h2>
     <ul class="button-list">
       <li>
-        <a type="button" class="button"
-           href="javascript:saveCustomSkin();">Save</a>
-        <a type="button" class="button"
-           href="javascript:pasteToGist();">Share</a>
+        <a class="button" onclick="saveCustomSkin()">Save</a>
+        <a class="button" onclick="saveAs()">Save As</a>
+        <a class="button" onclick="pasteToGist()">Share</a>
       Clicking save immediately updates Ubiquity's look.
       </li>
       <br/><br/>
