renamed settings page s/ubiquity skins/ubiquity settings and skins/

--- a/ubiquity/chrome/content/settings.html
+++ b/ubiquity/chrome/content/settings.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" media="all"
         href="web-content.css" />
   <link rel="shortcut icon" href="chrome://ubiquity/skin/icons/favicon.ico" type="image/x-icon" />
-  <title>Ubiquity Skins</title>
+  <title>Ubiquity Settings and Skins</title>
   <style>
     .warning{ background-color: #FFFCBA; border: 1px solid #F09B9A; width: 740px; padding: 5px;}
   </style>
