Added NounUtils.nounTypeFromDictionary. Split noun_type_language into noun_type_lang_(google|wikipedia).
--HG--
extra : rebase_source : bb2f849f81131899d16b4d02043baf4108303c26

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -327,7 +327,7 @@ CmdUtils.CreateCommand({
   name: "wikipedia",
   synonyms: ["lookup"],
   takes: {search: noun_arb_text},
-  modifiers: {in: noun_type_language},
+  modifiers: {in: noun_type_lang_wikipedia},
   locale: "en-US",
   homepage: "http://theunfocused.net/moz/ubiquity/verbs/",
   author: {name: "Blair McBride", email: "blair@theunfocused.net"},
