--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -9,16 +9,13 @@
   <title>Ubiquity Commands</title>
 </head>
 <body>
+<div class="head">Wherein are listed the commands at your disposal.</div>
+
 <script src="resource://ubiquity/scripts/jquery.js"></script>
 <script type="application/javascript;version=1.8"
         src="chrome://ubiquity/content/header.js"></script>
 <script type="application/javascript;version=1.7"
         src="cmdlist.js"></script>
-
-<div class="head">
-  <span class="large">Ubiquity:</span> Wherein are listed the commands at your disposal.</span>
-</div>
-
 
 <div id="nav-container"></div>
 
@@ -33,7 +30,7 @@
       <a id="show-hide-cmdlist-help" onclick="showCmdListHelp(true);">Learn How to Use This Page</a>
     </p>
   </div>
-  
+
 <div id="cmdlist-help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
   <ul>
   <li>All the commands that Ubiquity recognizes are listed in the right column.  The black text is the command's name (what you type into Ubiquity to use it).  The grey text explains what the command does.</li>
@@ -45,7 +42,7 @@
 
   </ul>
   <a onclick="showCmdListHelp(false);">Hide Help</a>
-  
+
 </div>
 
 <table width="100%">
@@ -64,15 +61,14 @@
 
 <br clear="all"/>
 
-  <div id="command-feed-graveyard-div">
-    <a name="graveyard"><h2>Unsubscribed Feeds</h2></a>
-    <p id="command-feed-graveyard-header">
-      You used to be subscribed to these.
-      If you want one back, click the "[resubscribe]" link beneath it.
-    </p>
-    <ul id="command-feed-graveyard"></ul>
-  </div>
-
+<div id="command-feed-graveyard-div">
+  <h2 id="graveyard">Unsubscribed Feeds</h2>
+  <p id="command-feed-graveyard-header">
+    You used to be subscribed to these.
+    If you want one back, click the "[resubscribe]" link beneath it.
+  </p>
+  <ul id="command-feed-graveyard"></ul>
+</div>
 
 </body>
 </html>
