Reorganized the developer information on the command editor page; removed redundant stuff.

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -215,38 +215,21 @@
 
 
   <div class="col-five">
+
+  <h2>Share Your Commands</h2>
+  <p>Post your command on the <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page so that other users can find it.</p>
+  <p>Also, sign up for the the <a href="https://ubiquity.mozilla.com/herd/command-feed/">herd command</a> which will then display your command on the <a href="https://ubiquity.mozilla.com/herd/">dashboard</a>.</p>
+    
   <h2>Developing Ubiquity</h2>
-
-  <p style="background-color: #F2E78B; padding:8px;">
-  <strong>New</strong>: read the documentation for the <strong><a href="file.html#index.html">command APIs</a></strong>.
-  </p>
-
-  <p>
-  <strong>Learn</strong> how to develop for Ubiquity by reading the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1_Author_Tutorial">command author tutorial</a>.
-  </p>
-
-  <p>Use the <a href="editor.html">command editor</a> to play around
-  with <strong>creating new</strong> Ubiquity commands.  This isn't just a fun way to
-  experiment with Ubiquity&mdash;it's actually a really easy way to
-  experiment with Firefox development in general, because writing and
-  changing commands doesn't require restarting Firefox, or even
-  manually reloading anything.</p>
-
-  <p><strong>Get involved!</strong> Learn how by visiting the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity">Ubiquity Wiki</a>.</p>
-
-  <p><strong>Share</strong> your commands. Post it on the
-  <a href="http://wiki.mozilla.org/Labs/Ubiquity/Commands_In_The_Wild">commands in the wild</a> wiki page. Also, sign up for the the <a href="https://ubiquity.mozilla.com/herd/command-feed/">herd command</a> which will then display your command on the <a href="https://ubiquity.mozilla.com/herd/">dashboard</a>.</p>
 
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
   <p>Help us test our <a href="feed.html#experimental-commands.html">
-    experimental commands</a>!  And if you're going to be developing
-    Ubiquity itself, check out our <a
+    experimental commands</a>!</p>
+
+  <p>And if you're going to be developing Ubiquity itself, check out our <a
     href="feed.html#core-developer-commands.html">core developer
     commands</a>.</p>
-
-
 </div>
 
 <div class="col-four">
