updated NounUtils, test files, ja (parser 1) nountypes, and parser-demo tests to support noun_type.name
--HG--
extra : rebase_source : 502ad0fee9350951eaab276d031b478c9754ff17

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -449,7 +449,7 @@ CmdUtils.makeSearchCommand({
 });
 
 const noun_type_amazon_com_index = {
-  _name: "Amazon.com index",
+  name: "Amazon.com index",
   list: [{text: s, data: d, summary: s} for ([s, d] in Iterator({
     All: 0,
     Apparel: 15683091,
