Updating Parser 2 > Parser 1 converter so that Parser 2-formatted commands are given Parser 2-style arguments (i.e. args.goal, not args.to)... this eliminates the need for code like `(args.to || args.goal).text`...

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -218,7 +218,7 @@ CmdUtils.CreateCommand({
   icon: "chrome://ubiquity/skin/icons/search.png",
   description: "Search using your installed search engines",
   preview: function(previewBlock, args) {
-    var instrument = args.instrument || args.with;
+    var instrument = args.instrument;
     if (instrument && instrument.data) {
       searchEngine = instrument.data;
     } else {
@@ -233,7 +233,7 @@ CmdUtils.CreateCommand({
     previewBlock.innerHTML = CmdUtils.renderTemplate(previewTemplate, previewData);
   },
   execute: function(args) {
-    var instrument = args.instrument || args.with;
+    var instrument = args.instrument;
     if (instrument && instrument.data) {
       searchEngine = instrument.data;
     } else {
