cmdlist: Removed extra "by"s. Made help-toggling nicer.

--- a/ubiquity/chrome/content/cmdlist.html
+++ b/ubiquity/chrome/content/cmdlist.html
@@ -21,13 +21,13 @@
 
   <br clear="all"/>
   <div style="text-align:center;">
-    <p>You can get to this page at any time using the "Command-list" command.</p>
+    <p>You can get to this page at any time using the "command-list" command.</p>
     <p>
       You have <span id="num-commands"></span> commands in
       <span id="num-subscribed-feeds"></span> command feeds. |
       <span id="unsubscribed-feeds-help">You have unsubscribed from <a href="#graveyard"><span id="num-unsubscribed-feeds"></span> command feeds</a>.
       |</span>
-      <a id="show-hide-cmdlist-help" onclick="showCmdListHelp(true);">Learn How to Use This Page</a>
+      <a id="show-hide-cmdlist-help" onclick=""></a>
     </p>
   </div>
 
@@ -41,8 +41,6 @@
   link beneath the feed name.  All of the commands in the feed will stop working.  If you change your mind, you can re-subscribe at the bottom of the page.</li>
 
   </ul>
-  <a onclick="showCmdListHelp(false);">Hide Help</a>
-
 </div>
 
 <table width="100%">
