new-parser: trivial updates to the Parser 2 Playpen to support unfilled arg display and new command `names` format
--HG--
extra : rebase_source : fc815b977782e3df2f7fb46826344dc2d421f11f

--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -57,7 +57,7 @@
         border-bottom: 2px black solid;
       }
       
-      .inactive {
+      .inactive, .needarg {
         color: gray;
       }
       
