documentation: Fixed a link in the index (#720) and some other glitches.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -20,7 +20,7 @@
     <li><a class="intra-wiki"
            href="#modules/utils.js">Utils</a></li>
     <li><a class="intra-wiki"
-           href="#feed-parts/header/cmdutils.js">CmdUtils</a></li>
+           href="#modules/cmdutils.js">CmdUtils</a></li>
     <li><a class="intra-wiki"
            href="#modules/eventhub.js">EventHub</a></li>
     <li><a class="intra-wiki"
