--- a/ubiquity/modules/parser/new/index.html
+++ b/ubiquity/modules/parser/new/index.html
@@ -98,7 +98,7 @@
     
     <div id='languages'></div>
     <div>
-      <input type='button' name='clearnouncache' value='clear noun cache' id='clearnouncache'></input>
+      <!--<input type='button' name='clearnouncache' value='clear noun cache' id='clearnouncache'></input>-->
       <label for='maxSuggestions'>max suggestions:</label><input id='maxSuggestions' value='5' size='2'/>
       <input type='checkbox' name='displayparseinfo' id='displayparseinfo'></input><label title='this will slow things down considerably' for='displayparseinfo'>display parse info</label>
     </div>
