NounUtils.NounType can now accept RegExp/Object in addition to Array, RIPing nounTypeFrom*().

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -37,7 +37,7 @@
     <li><a class="intra-wiki"
            href="#modules/parser/new/parser.js">Parser 2</a></li>
     <li><a class="intra-wiki"
-           href="#modules/nountypes.js">Builtin Noun Types</a></li>
+           href="#modules/nountypes.js">Built-in Noun Types</a></li>
   </ul>
   <p>We also have some of our standard feeds documented:</p>
   <ul>
